Fixed button spacing

--- a/_sass/all.sass
+++ b/_sass/all.sass
@@ -181,6 +181,7 @@ ul.buttons
 			color: $color-accent
 			display: block
 			margin-right: 20px
+			margin-bottom: 6px
 			padding: 6px 20px
 			&:hover
 				color: $color-stroke
